# cmake-mpi-test

./: .README.md.swp  .gitignore  CMakeLists.txt  README.md  main.cpp
exe/: main
